--- a/EcoHacks/main/templates/main/base.html
+++ b/EcoHacks/main/templates/main/base.html
@@ -10,7 +10,7 @@
             .wrapper {
                 min-height: 100vh;
                 position: relative;
-                background-color: #ECFFD9;
+                background-color: #EEFFE4;
             }
 
             /* Set the padding bottom of the wrapper to accommodate the height of the footer */
@@ -43,7 +43,7 @@
     <body class="container-fluid">
         <div class="wrapper">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand mr-3 text-white"  href="#">
+                <a class="navbar-brand mr-3 text-white"  href="{% url 'index' %}">
                     GreenWay
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +53,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active mr-2">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/"> Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link text-white" href="{% url 'index' %}"> Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item mr-2">
-                            <a class="nav-link text-white" href="http://127.0.0.1:8000/about/"> About </a>
+                            <a class="nav-link text-white" href="{% url 'about' %}"> About </a>
                         </li>
                     </ul>
                 </div>
