changed all button colors

--- a/EcoHacks/main/templates/main/map.html
+++ b/EcoHacks/main/templates/main/map.html
@@ -16,7 +16,6 @@
   <style>
     * {
       font-family: Arial, sans-serif;
-      color: ;
     }
   </style>
 
@@ -66,14 +65,14 @@
       padding: 10px;
       border-radius: 5px;
       border: none;
-      background-color: #0077cc;
+      background-color: #0b6633;
       color: #fff;
       font-size: 16px;
       margin-bottom: 10px;
       cursor: pointer;
     }
     button:hover {
-      background-color: #005ea8;
+      background-color: #2F540A;
     }
   </style>
   <script async
