--- a/EcoHacks/users/templates/users/register.html
+++ b/EcoHacks/users/templates/users/register.html
@@ -7,7 +7,7 @@
      height: 100%;
      }
      body, div, h1, form, input, p {
-     background-color: #ECFFD9;
+     background-color: #EEFFE4;
      padding: 0;
      margin: 10;
      outline: none;
@@ -60,7 +60,7 @@
      margin: 10px auto;
      border-radius: 5px;
      border: none;
-     background: #437710;
+     background: #0b6633;
      font-size: 14px;
      font-weight: 600;
      color: #fff;
