--- a/EcoHacks/main/templates/main/about.html
+++ b/EcoHacks/main/templates/main/about.html
@@ -1,17 +1,16 @@
 {% extends 'main/base.html' %}
 {% load static %}
+
 {% block content %}
-    <head>
+  <head>
     <title>About Us</title>
     <style>
-      /* Set the font and background colors for the page */
       body {
         font-family: Arial, sans-serif;
         color: #333;
         background-color: #f7f7f7;
       }
 
-      /* Center the content on the page */
       .container {
         max-width: 800px;
         margin: 0 auto;
@@ -23,6 +22,8 @@
         font-size: 36px;
         font-weight: bold;
         margin-top: 0;
+        margin-bottom: 50px;
+        text-align: center;
       }
 
       h2 {
@@ -31,15 +32,10 @@
         margin-top: 40px;
       }
 
-      /* Style the paragraphs */
       p {
-        font-size: 16px;
+        text-indent: 20px;
+        font-size: 19px;
         line-height: 1.5;
-      }
-
-      /* Add a border to the image */
-      img {
-        border: 5px solid #fff;
       }
     </style>
   </head>
@@ -47,9 +43,14 @@
     <div class="container">
       <h1>About Our Web App</h1>
 
-      <h2>Decreasing our Carbon Footprint</h2>
-      <p>ADD TEXT HERE TO FINISH THIS</p>
+<!--      <h2>Decreasing our Carbon Footprint</h2>-->
+      <p>Welcome to GreenWay, a web application that helps users reduce their carbon footprint and contribute to a more sustainable world.</p>
 
+      <p>At GreenWay, we believe that everyone can make a difference. By taking small steps towards a greener future, we can collectively make a big impact. That's why we built this tool to help people understand the impact of their travel choices and encourage them to make sustainable choices whenever possible.</p>
+
+      <p>By using GreenWay, users can make informed decisions about their travel plans and minimize their environmental impact. Our user-friendly interface makes it easy for anyone to use GreenWay. Simply input your origin and destination, along with your car's fuel efficiency and fuel type, and our tool will calculate your carbon emissions for the trip. You can also compare emissions for different routes and modes of travel.</p>
+
+      <p>Join us in our mission to promote sustainable transportation practices and make a difference in the world. Start reducing your carbon footprint today by using the Greener Way!</p>
     </div>
   </body>
 {% endblock %}
